[project]
name = "demicode"
description = "Fixed-width display of Unicode is deeply broken"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache 2.0"}
authors = [{name = "Robert Grimm", email="rgrimm@alum.mit.edu"}]
keywords= ["Unicode", "fixed-width", "East Asian width", "wcwidth", "hot mess"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["mypy", "flit"]

[project.urls]
repository = "https://github.com/apparebit/demicode"

[project.scripts]
demicode = "demicode.__main__:main"

[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[tool.mypy]
python_version = "3.11"
files = ["demicode/*.py"]
enable_incomplete_feature = "TypeVarTuple"
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
allow_redefinition = true
strict_equality = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
#pretty = true
